# streamdeck-zoom-plugin

./: .gitignore  CMakeLists.txt  README.md
Release/: com.lostdomain.zoom.streamDeckPlugin
Sources/: CMakeLists.txt  MacOS.cpp  Windows.cpp  ZoomStreamDeckPlugin.cpp  ZoomStreamDeckPlugin.h
Sources/Windows/: getZoomStatus.py
sdPlugin/: manifest.json  manifest.json.cmake  streamdeck-zoom-icons-grayscale.psd  streamdeck-zoom-icons.psd  video-camera.psd
sdPlugin/propertyinspector/: index-raise-hand.html
